WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276269
REGRESSION (
280396@main
): Web process receives unexpected message WebPageTesting::ClearWheelEventTestMonitor when running tests
https://bugs.webkit.org/show_bug.cgi?id=276269
Summary
REGRESSION (280396@main): Web process receives unexpected message WebPageTest...
Sihui Liu
Reported
2024-07-05 14:32:56 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-05 14:37:39 PDT
<
rdar://problem/131191681
>
Sihui Liu
Comment 2
2024-07-05 14:46:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30532
EWS
Comment 3
2024-07-07 13:13:25 PDT
Committed
280720@main
(5deb5d7b1324): <
https://commits.webkit.org/280720@main
> Reviewed commits have been landed. Closing PR #30532 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug