REGRESSION (280396@main): Web process receives unexpected message WebPageTesting::ClearWheelEventTestMonitor when running tests https://bugs.webkit.org/show_bug.cgi?id=276269 rdar://131191681

Reviewed by Charlie Wolfe.

WebPageProxy can change its m_legacyMainFrameProcess and internals().webPageID (i.e. webPageIDInMainFrameProcess()) in
WebPageProxy::swapToProvisionalPage. Currently WebPageProxyTesting sends message to the latest web process of
WebPageProxy, but it uses an old page identifier captured at WebPageProxyTesting's creation time, so the web process may
not recognize the message.

* Source/WebKit/UIProcess/WebPageProxyTesting.cpp:
(WebKit::WebPageProxyTesting::WebPageProxyTesting):
(WebKit::WebPageProxyTesting::messageSenderDestinationID const):
* Source/WebKit/UIProcess/WebPageProxyTesting.h:

Canonical link: https://commits.webkit.org/280720@main